﻿$Revision$
  $Author$ $Date$
	1. продолжение r1368.2

#Revision: 1368
  Author: ctapmex Date: 2010-02-11 13:50:25 +0500 (Чт, 11 фев 2010)
	1. автоматизация шапки этого файла не очень удачная-)
	2. убрано часть security функций по работе со строками и поправлены хедеры для сборки под cygwin

#Revision: 1367
	Author: ctapmex Date: 2010-02-11 12:23:01 +0500 (Чт, 11 фев 2010)
	1. исправлена ошибка игнорирования EEREDRAW_CHANGE, что например проявлялось с плагином AutoComplete

#Revision: 1338
	Author: ctapmex Date: 2010-02-09 10:42:55 +0500 (Вт, 09 фев 2010)
	1. Поправил бардак с предыдущей ревизии
	2. Пробую автоматизировать шапку этого файла. 

#revision 1313
	ctapmex 05.02.2010 22:10
	промежуточная ревизия. все работает, но бардак в коде. прошу пока не пинать.
	1. Для диалога настроек используем отдельную функцию, для обработки сообщений.
	2. функции для чтения настроек, записи настроек, и применения их на редакторы.

#revision 1312
	ctapmex 05.02.2010 16:22
	1. Убрал info (PluginStartupInfo) из FarEditorSet. Вместо него используется глобальная
    переменная Info.

#revision 1302
	ctapmex 04.02.2010 23:40
	1. рефакторинг работы с реестром
		а) уберем отрицание из имен параметров. 
		б) define заменены на константы
		в) добавлены значения по умолчанию для параметров
		г) функции для чтения параметров принимают значение по умолчанию
		д) функция для записи всех настроек по умолчанию

#revision 1299
	ctapmex 04.02.2010 12:13
	1. поправлены valid тесты
	2. устанавливаем версию плагинов в 1.0.2.4 и собираем релиз
	3. сборка схем. тесты проходят на 100%
	4. файл истории изменения FarColor

#revision 1298
	ctapmex 04.02.2010 11:11
	1. поправлен баг в makefile, с отображением #<< . заменены тесты для него
	2. слияние с 1287

#revision 1297
	ctapmex 04.02.2010 09:58
	1. меню "Список функций" (FarEditor::showOutliner)
		а) комбинация Ctrl-Enter вставляла в редактор текст в иероглифах ( неверная кодировка)
		б) нормально вводяться в фильтр клавиши ":;-_"